opam-version: "2.0"
maintainer: "john.else@gmail.com"
authors: ["John Else" "Marek Kubica"]
homepage: "https://github.com/johnelse/ocaml-osc"
bug-reports: "https://github.com/johnelse/ocaml-osc/issues"
dev-repo: "git+https://github.com/johnelse/ocaml-osc"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "test/async"] {with-test}
]

depends: [
  "dune" {>= "1.6"}
  "async" {>= "v0.9" & < "v0.12"}
  "ocaml" {>= "4.02.1"}
  "osc"
  "ounit" {with-test}
]
synopsis: "OpenSoundControl Async library"
description: """
OpenSoundControl client and server implementation, using Async-based IO
"""
url {
  src:
    "https://github.com/johnelse/ocaml-osc/archive/master.tar.gz"
}
